--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -18,10 +18,10 @@ foreach( variant ball euler transport )
   string( TOUPPER ${variant} variant_upper )
   set( prog "main_${variant}" )
   add_executable( ${prog} main.cc )
+  dune_target_enable_all_packages( ${prog} )
   target_compile_definitions( ${prog} PRIVATE "${variant_upper}" )
   target_compile_definitions( ${prog} PUBLIC "ALUGRID_CUBE" "GRIDDIM=3" "WORLDDIM=3" )
-  add_dune_mpi_flags( ${prog} )
-  dune_target_link_libraries( ${prog} "${DUNE_LIBS};${DUNE_ALUGRID_LIBRARY}" )
+  # dune_target_link_libraries( ${prog} "${DUNE_LIBS};${DUNE_ALUGRID_LIBRARY}" )
 
   foreach( type cube simplex )
     string( TOUPPER ${type} type_upper )
@@ -29,8 +29,8 @@ foreach( variant ball euler transport )
       set( prog "main_${variant}_${type}_${dim}d" )
       add_executable( ${prog} EXCLUDE_FROM_ALL main.cc )
       target_compile_definitions( ${prog} PRIVATE "${variant_upper}" "ALUGRID_${type_upper}" "GRIDDIM=${dim}" "WORLDDIM=${dim}" )
-      add_dune_mpi_flags( ${prog} )
-      dune_target_link_libraries( ${prog} "${DUNE_LIBS};${DUNE_ALUGRID_LIBRARY}" )
+      dune_target_enable_all_packages( ${prog} )
+      # dune_target_link_libraries( ${prog} "${DUNE_LIBS};${DUNE_ALUGRID_LIBRARY}" )
     endforeach()
   endforeach()
 endforeach()
