--- a/examples/backuprestore/CMakeLists.txt
+++ b/examples/backuprestore/CMakeLists.txt
@@ -16,10 +16,8 @@ add_definitions("-DWORLDDIM=${WORLDDIM}")
 
 if( NOT HAVE_ALUGRID )
   add_executable(main_br main.cc)
-  dune_target_link_libraries(main_br "${DUNE_LIBS};${DUNE_ALUGRID_LIBRARY}")
-  # libdunalugrid needs symbols from zoltan. Therefore we need to link
-  # to Zoltan afterwards.
-  add_dune_zoltan_flags(main_br)
+  #dune_target_link_libraries(main_br "${DUNE_LIBS};${DUNE_ALUGRID_LIBRARY}")
+  dune_target_enable_all_packages( main_br )
 endif( NOT HAVE_ALUGRID  )
 
 install(FILES ${examplesbr_HEADERS} DESTINATION ${examplesbrdir})
