--- a/examples/loadbalance/CMakeLists.txt
+++ b/examples/loadbalance/CMakeLists.txt
@@ -24,26 +24,26 @@ configure_file(alugrid.cfg ${CMAKE_CURRENT_BINARY_DIR}/alugrid.cfg COPYONLY)
 
 
 add_executable(main_internal main.cc)
-add_dune_mpi_flags(main_internal )
-dune_target_link_libraries(main_internal "${DUNE_LIBS};${DUNE_ALUGRID_LIBRARY}")
+dune_target_enable_all_packages( main_internal )
+#dune_target_link_libraries(main_internal "${DUNE_LIBS};${DUNE_ALUGRID_LIBRARY}")
 set_property(TARGET main_internal APPEND PROPERTY 
   COMPILE_DEFINITIONS "BALL" )
 
 add_executable(main_weights main.cc)
-add_dune_mpi_flags(main_weights )
-dune_target_link_libraries(main_weights "${DUNE_LIBS};${DUNE_ALUGRID_LIBRARY}")
+dune_target_enable_all_packages(main_weights )
+#dune_target_link_libraries(main_weights "${DUNE_LIBS};${DUNE_ALUGRID_LIBRARY}")
 set_property(TARGET main_weights APPEND PROPERTY 
   COMPILE_DEFINITIONS "BALL;USE_WEIGHTS=1" )
 
 add_executable(main_simple main.cc)
-add_dune_mpi_flags(main_simple )
-dune_target_link_libraries(main_simple "${DUNE_LIBS};${DUNE_ALUGRID_LIBRARY}")
+dune_target_enable_all_packages(main_simple )
+#dune_target_link_libraries(main_simple "${DUNE_LIBS};${DUNE_ALUGRID_LIBRARY}")
 set_property(TARGET main_simple APPEND PROPERTY 
   COMPILE_DEFINITIONS "BALL;USE_SIMPLELB=1" )
 
 add_executable(main_zoltan main.cc)
-add_dune_mpi_flags(main_zoltan )
-dune_target_link_libraries(main_zoltan "${DUNE_LIBS};${DUNE_ALUGRID_LIBRARY}")
+dune_target_enable_all_packages(main_zoltan )
+#dune_target_link_libraries(main_zoltan "${DUNE_LIBS};${DUNE_ALUGRID_LIBRARY}")
 set_property(TARGET main_zoltan APPEND PROPERTY 
   COMPILE_DEFINITIONS "BALL;USE_ZOLTANLB=1" )
 
