--- a/examples/testEfficiency/CMakeLists.txt
+++ b/examples/testEfficiency/CMakeLists.txt
@@ -26,20 +26,20 @@ add_definitions("-DWORLDDIM=${WORLDDIM}")
 configure_file(check-efficiency.sh ${CMAKE_CURRENT_BINARY_DIR}/check-efficiency.sh COPYONLY)
 
 add_executable(main_transport_eff main.cc)
-add_dune_mpi_flags(main_transport_eff )
-dune_target_link_libraries(main_transport_eff "${DUNE_LIBS};${DUNE_ALUGRID_LIBRARY}")
+dune_target_enable_all_packages(main_transport_eff )
+# dune_target_link_libraries(main_transport_eff "${DUNE_LIBS};${DUNE_ALUGRID_LIBRARY}")
 set_property(TARGET main_transport_eff APPEND PROPERTY 
   COMPILE_DEFINITIONS "TRANSPORT" )
 
 add_executable(main_ball_eff main.cc)
-add_dune_mpi_flags(main_ball_eff )
-dune_target_link_libraries(main_ball_eff "${DUNE_LIBS};${DUNE_ALUGRID_LIBRARY}")
+dune_target_enable_all_packages(main_ball_eff )
+# dune_target_link_libraries(main_ball_eff "${DUNE_LIBS};${DUNE_ALUGRID_LIBRARY}")
 set_property(TARGET main_ball_eff APPEND PROPERTY 
   COMPILE_DEFINITIONS "BALL" )
 
 add_executable(main_euler_eff main.cc)
-add_dune_mpi_flags(main_euler_eff )
-dune_target_link_libraries(main_euler_eff "${DUNE_LIBS};${DUNE_ALUGRID_LIBRARY}")
+dune_target_enable_all_packages(main_euler_eff )
+# dune_target_link_libraries(main_euler_eff "${DUNE_LIBS};${DUNE_ALUGRID_LIBRARY}")
 set_property(TARGET main_euler_eff APPEND PROPERTY 
   COMPILE_DEFINITIONS "EULER" )
 
