--- a/examples/communication/CMakeLists.txt
+++ b/examples/communication/CMakeLists.txt
@@ -27,20 +27,20 @@ add_definitions("-DWORLDDIM=${WORLDDIM}")
 configure_file(check-communication.sh ${CMAKE_CURRENT_BINARY_DIR}/check-communication.sh COPYONLY)
 
 add_executable(main_transport_comm main.cc)
-add_dune_mpi_flags(main_transport_comm )
-dune_target_link_libraries(main_transport_comm "${DUNE_LIBS};${DUNE_ALUGRID_LIBRARY}")
+dune_target_enable_all_packages(main_transport_comm )
+#dune_target_link_libraries(main_transport_comm "${DUNE_LIBS};${DUNE_ALUGRID_LIBRARY}")
 set_property(TARGET main_transport_comm APPEND PROPERTY 
   COMPILE_DEFINITIONS "TRANSPORT" )
 
 add_executable(main_ball_comm main.cc)
-add_dune_mpi_flags(main_ball_comm )
-dune_target_link_libraries(main_ball_comm "${DUNE_LIBS};${DUNE_ALUGRID_LIBRARY}")
+dune_target_enable_all_packages(main_ball_comm )
+#dune_target_link_libraries(main_ball_comm "${DUNE_LIBS};${DUNE_ALUGRID_LIBRARY}")
 set_property(TARGET main_ball_comm APPEND PROPERTY 
   COMPILE_DEFINITIONS "BALL" )
 
 add_executable(main_euler_comm main.cc)
-add_dune_mpi_flags(main_euler_comm )
-dune_target_link_libraries(main_euler_comm "${DUNE_LIBS};${DUNE_ALUGRID_LIBRARY}")
+dune_target_enable_all_packages(main_euler_comm )
+#dune_target_link_libraries(main_euler_comm "${DUNE_LIBS};${DUNE_ALUGRID_LIBRARY}")
 set_property(TARGET main_euler_comm APPEND PROPERTY 
   COMPILE_DEFINITIONS "EULER" )
 
