--- a/examples/callback/CMakeLists.txt
+++ b/examples/callback/CMakeLists.txt
@@ -1,7 +1,3 @@
-set(GRIDTYPE  ALUGRID_CUBE)
-set(GRIDDIM  3)
-set(WORLDDIM  3)
-
 set(callbackdir  ${CMAKE_INSTALL_INCLUDEDIR}/examples/callback)
 set(callback_HEADERS adaptation.hh  
                           diagnostics.hh  
@@ -18,29 +14,27 @@ set(EXAMPLES main_transport_cb
              main_ball_cb 
              main_euler_cb)
 
-
-
-add_definitions("-D${GRIDTYPE}")
-add_definitions("-DGRIDDIM=${GRIDDIM}")
-add_definitions("-DWORLDDIM=${WORLDDIM}")
+add_definitions("-DALUGRID_CUBE")
+add_definitions("-DGRIDDIM=3")
+add_definitions("-DWORLDDIM=3")
 
 configure_file(check-adaptation.sh ${CMAKE_CURRENT_BINARY_DIR}/check-adaptation.sh COPYONLY)
 
 
 add_executable(main_transport_cb main.cc)
-dune_target_enable_all_packages(main_transport_cb )
+dune_target_enable_all_packages( main_transport_cb )
 #dune_target_link_libraries(main_transport_cb "${DUNE_LIBS};${DUNE_ALUGRID_LIBRARY}")
 set_property(TARGET main_transport_cb APPEND PROPERTY 
   COMPILE_DEFINITIONS "TRANSPORT" )
 
 add_executable(main_ball_cb main.cc)
-dune_target_enable_all_packages(main_ball_cb )
+dune_target_enable_all_packages( main_ball_cb )
 #dune_target_link_libraries(main_ball_cb "${DUNE_LIBS};${DUNE_ALUGRID_LIBRARY}")
 set_property(TARGET main_ball_cb APPEND PROPERTY 
   COMPILE_DEFINITIONS "BALL" )
 
 add_executable(main_euler_cb main.cc)
-dune_target_enable_all_packages(main_euler_cb )
+dune_target_enable_all_packages( main_euler_cb )
 #dune_target_link_libraries(main_euler_cb "${DUNE_LIBS};${DUNE_ALUGRID_LIBRARY}")
 set_property(TARGET main_euler_cb APPEND PROPERTY 
   COMPILE_DEFINITIONS "EULER" )
