--- a/examples/testEfficiency/CMakeLists.txt
+++ b/examples/testEfficiency/CMakeLists.txt
@@ -1,7 +1,3 @@
-set(GRIDTYPE  ALUGRID_CUBE)
-set(GRIDDIM  3)
-set(WORLDDIM  3)
-
 set(testefficiencydir  ${CMAKE_INSTALL_INCLUDEDIR}/examples/testEfficiency)
 set(testefficiency_HEADERS adaptation.hh  
                            diagnostics.hh  
@@ -17,11 +13,9 @@ set(EXAMPLES main_transport_eff
              main_ball_eff 
              main_euler_eff)
 
-
-
-add_definitions("-D${GRIDTYPE}")
-add_definitions("-DGRIDDIM=${GRIDDIM}")
-add_definitions("-DWORLDDIM=${WORLDDIM}")
+add_definitions("-DALUGRID_CUBE")
+add_definitions("-DGRIDDIM=3")
+add_definitions("-DWORLDDIM=3")
 
 configure_file(check-efficiency.sh ${CMAKE_CURRENT_BINARY_DIR}/check-efficiency.sh COPYONLY)
 
