[bugfix] make library compile if zolten is not found
Former-commit-id: 23399fe2bd9632f52019715efb924cf432fd11e4

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -19,9 +19,11 @@ dune_add_library(dunealugrid
 add_dune_mpi_flags( dunealugrid )
 
 # zoltan dependencies
+if( ${ZOLTAN_FOUND} )
 target_link_libraries(dunealugrid ${ZOLTAN_LIBRARY})
 set_property(TARGET dunealugrid APPEND PROPERTY
              INCLUDE_DIRECTORIES "${ZOLTAN_INCLUDE_DIRS}")
+endif()
 
 # register alu grid to all pkg flags
 dune_register_package_flags(LIBRARIES "${DUNE_ALUGRID_LIBRARY}"
