[bugfix] correctly link zoltan library
Former-commit-id: 1a100e8ebf4189ddff978aa940797b6b6c3d9a6f

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -20,7 +20,7 @@ add_dune_mpi_flags( dunealugrid )
 
 # zoltan dependencies
 if( ${ZOLTAN_FOUND} )
-target_link_libraries(dunealugrid ${ZOLTAN_LIBRARY})
+target_link_libraries(dunealugrid ${ZOLTAN_LIBRARIES})
 set_property(TARGET dunealugrid APPEND PROPERTY
              INCLUDE_DIRECTORIES "${ZOLTAN_INCLUDE_DIRS}")
 endif()
