--- a/utils/convert-macrogrid/CMakeLists.txt
+++ b/utils/convert-macrogrid/CMakeLists.txt
@@ -2,7 +2,7 @@ set(EXTRA_PROGRAMS  convert)
 set(convertdir  ${CMAKE_INSTALL_INCLUDEDIR}/utils/convert-macrogrid)
 set(convert_HEADERS  partition.hh)
 add_executable(convert main.cc)
-target_link_libraries(convert ${DUNE_LIBS} dunealugrid ${ZLIB_LIBRARIES})
+dune_target_enable_all_packages( convert )
 # include not needed for CMake
 # include $(top_srcdir)/am/global-rules
 install(FILES ${convert_HEADERS} DESTINATION ${convertdir})
