[bugfix] make tests link.
Former-commit-id: b005798b17f174591b7a57726d8781b3a30036fa

--- a/dune/alugrid/impl/test/CMakeLists.txt
+++ b/dune/alugrid/impl/test/CMakeLists.txt
@@ -1,41 +1,20 @@
-#set(TESTS adapt 
-#          backuprestore 
-#          sizes
-#          threadsafety)
-set(TESTS adapt)
-set(ALUSOURCES
-  ${dune-alugrid_SOURCE_DIR}/dune/alugrid/impl/binaryio.cc
-  ${dune-alugrid_SOURCE_DIR}/dune/alugrid/impl/macrofileheader.cc
-  ${dune-alugrid_SOURCE_DIR}/dune/alugrid/impl/serial/gitter_geo.cc
-  ${dune-alugrid_SOURCE_DIR}/dune/alugrid/impl/serial/gitter_hexa_top.cc
-  ${dune-alugrid_SOURCE_DIR}/dune/alugrid/impl/serial/gitter_impl.cc
-  ${dune-alugrid_SOURCE_DIR}/dune/alugrid/impl/serial/gitter_mgb.cc
-  ${dune-alugrid_SOURCE_DIR}/dune/alugrid/impl/serial/gitter_sti.cc
-  ${dune-alugrid_SOURCE_DIR}/dune/alugrid/impl/serial/gitter_tetra_top.cc
-  ${dune-alugrid_SOURCE_DIR}/dune/alugrid/impl/serial/mapp_cube_3d.cc
-  ${dune-alugrid_SOURCE_DIR}/dune/alugrid/impl/serial/mapp_tetra_3d.cc
-  ${dune-alugrid_SOURCE_DIR}/dune/alugrid/impl/serial/myalloc.cc
-  ${dune-alugrid_SOURCE_DIR}/dune/alugrid/impl/duneinterface/gitter_dune_impl.cc
-  ${dune-alugrid_SOURCE_DIR}/dune/alugrid/impl/serial/ghost_info.cc
-  ${dune-alugrid_SOURCE_DIR}/dune/alugrid/impl/serial/ghost_elements.cc
-  ${dune-alugrid_SOURCE_DIR}/dune/alugrid/impl/duneinterface/gitter_dune_pll_impl.cc
-  ${dune-alugrid_SOURCE_DIR}/dune/alugrid/impl/parallel/mpAccess.cc
-  ${dune-alugrid_SOURCE_DIR}/dune/alugrid/impl/parallel/gitter_hexa_top_pll.cc
-  ${dune-alugrid_SOURCE_DIR}/dune/alugrid/impl/parallel/gitter_pll_impl.cc
-  ${dune-alugrid_SOURCE_DIR}/dune/alugrid/impl/parallel/gitter_pll_idn.cc
-  ${dune-alugrid_SOURCE_DIR}/dune/alugrid/impl/parallel/gitter_pll_ldb.cc
-  ${dune-alugrid_SOURCE_DIR}/dune/alugrid/impl/parallel/gitter_pll_mgb.cc
-  ${dune-alugrid_SOURCE_DIR}/dune/alugrid/impl/parallel/gitter_pll_sti.cc
-  ${dune-alugrid_SOURCE_DIR}/dune/alugrid/impl/parallel/gitter_tetra_top_pll.cc)
+set(TESTS adapt
+          backuprestore
+          sizes
+          threadsafety)
 
 # copy data to build source to make tests work
 file(COPY alugrid.cfg grids
   DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
-add_executable(sizes sizes.cc ${ALUSOURCES})
-add_executable(adapt adapt.cc ${ALUSOURCES})
-add_executable(backuprestore backuprestore.cc ${ALUSOURCES})
-add_executable(threadsafety threadsafety.cc ${ALUSOURCES})
+# register alu grid to all pkg flags
+dune_register_package_flags(LIBRARIES "${DUNE_ALUGRID_LIBRARY}"
+                            INCLUDE_DIRS "${DUNE_ALUGRID_INCLUDEDIRS}")
+
+add_executable(sizes sizes.cc)
+add_executable(adapt adapt.cc)
+add_executable(backuprestore backuprestore.cc)
+add_executable(threadsafety threadsafety.cc)
 
 foreach(i ${TESTS})
   # target_link_libraries(${i} ${ZLIB_LIBRARIES})
