[bugfix] we still use add_test, therefore set REENABLE_ADD_TEST to true.
Former-commit-id: e73f7934024c0099d2eb9d7212bd76c9d34077ae

--- a/dune/alugrid/test/CMakeLists.txt
+++ b/dune/alugrid/test/CMakeLists.txt
@@ -25,12 +25,8 @@ endforeach(i ${SUBDIRS})
 dune_register_package_flags(LIBRARIES "${DUNE_ALUGRID_LIBRARY}"
                             INCLUDE_DIRS "${DUNE_ALUGRID_INCLUDEDIRS}")
 
+# enable all package flags for all tests
 foreach(i ${TESTS})
   dune_target_enable_all_packages( ${i} )
   add_test(${i} ${i})
 endforeach(i ${TESTS})
-
-# We do not want want to build the tests during make all
-# but just build them on demand
-add_directory_test_target(_test_target)
-add_dependencies(${_test_target} ${TESTS} ${COMPILE_XFAIL_TESTS})
