[bugfix][cmake] some corrections and bug fixes with downstream modules.
Former-commit-id: f478646d97e0601bff50dd6eaece00cead2d2b42

--- a/dune-alugrid.pc.in
+++ b/dune-alugrid.pc.in
@@ -9,7 +9,7 @@ DEPENDENCIES=@REQUIRES@
 Name: @PACKAGE_NAME@
 Version: @VERSION@
 Description: DUNE Adaptive, Load-balanced, and Unstructured Grid Module
-URL: http://aam.mathematik.uni-freiburg.de/IAM/Research/alugrid/
+URL: http://users.dune-project.org/projects/dune-alugrid
 Requires: ${DEPENDENCIES}
-Libs: -L${libdir}
+Libs: -L${libdir} -ldunealugrid
 Cflags: -I${includedir}
