when ALUGRID_COUNT_GLOBALCOMM print global comm counters to speedup file.
Former-commit-id: be7a9c6c88906d255487fe033c50033f288568a0

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -19,7 +19,11 @@ foreach( variant ball euler transport )
   set( prog "main_${variant}" )
   add_executable( ${prog} main.cc )
   dune_target_enable_all_packages( ${prog} )
-  target_compile_definitions( ${prog} PRIVATE "${variant_upper}" )
+  if( "${variant}" STREQUAL "ball" )
+    target_compile_definitions( ${prog} PRIVATE "${variant_upper};ALUGRID_COUNT_GLOBALCOMM" )
+  else()
+    target_compile_definitions( ${prog} PRIVATE "${variant_upper}" )
+  endif()
   target_compile_definitions( ${prog} PUBLIC "ALUGRID_CUBE" "GRIDDIM=3" "WORLDDIM=3" )
 
   foreach( type cube simplex )
