[bugfix] the recursive algorithim for bisection requires setting the refinement request to nosplit at the end of the method
Former-commit-id: 6ed87d73e7661f2d89b56c4e8aa4e1647eaf41e6

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -26,7 +26,7 @@ foreach( variant ball euler transport )
   endif()
   target_compile_definitions( ${prog} PUBLIC "ALUGRID_CUBE" "GRIDDIM=3" "WORLDDIM=3" )
 
-  foreach( type cube simplex )
+  foreach( type cube simplex conform )
     string( TOUPPER ${type} type_upper )
     foreach( dim RANGE 2 3 )
       set( prog "main_${variant}_${type}_${dim}d" )
