--- a/examples/testEfficiency/Makefile.am
+++ b/examples/testEfficiency/Makefile.am
@@ -14,7 +14,7 @@ CLEANFILES = $(DATACLEANFILES)
 
 # possible problems are BALL, TRANSPORT, EULER
 PROBLEM = TRANSPORT
-# extra flags: -DUSE_VECTOR_FOR_PWF -DNO_OUTPUT -DNON_BLOCKING
+# extra flags: -DUSE_VECTOR_FOR_PWF -DNO_OUTPUT -DNON_BLOCKING -DCALLBACK_ADAPTATION
 EXTRAFLAGS = 
 
 AM_CPPFLAGS += $(EXTRAFLAGS)
