[EntityPointerBase] fix assertion (kudos to Max Kahnt for pointing out the problem).
Former-commit-id: 43aa25f52298026e59f94778336fc7d38ffc7af3

--- a/dune/alugrid/test/CMakeLists.txt
+++ b/dune/alugrid/test/CMakeLists.txt
@@ -4,6 +4,7 @@ set(TESTS
   test-adaptivity
   test-fromtogridfactory
   test-twists
+  test-hierarchic
 )
 
 # copy data to build source to make tests work
@@ -13,6 +14,7 @@ add_executable(test-alugrid test-alugrid.cc)
 add_executable(test-adaptivity test-adaptivity.cc)
 add_executable(test-fromtogridfactory test-fromtogridfactory.cc)
 add_executable(test-twists test-twists.cc)
+add_executable(test-hierarchic test-hierarchic.cc)
 
 foreach(i ${SUBDIRS})
   if(${i} STREQUAL "test")
