pthreads: add pthreads check mostly needed in downstream modules.
Former-commit-id: c2fe4e197c238a7dd82b09c628db8028d42c26ba

--- a/cmake/modules/CMakeLists.txt
+++ b/cmake/modules/CMakeLists.txt
@@ -3,6 +3,7 @@ set(modules
     CMakeLists.txt
     DuneAlugridMacros.cmake
     FindDLMalloc.cmake
+    FindPThreads.cmake
     FindSIONlib.cmake
     FindZOLTAN.cmake
 )
