[bugfix][cmake] Fix installation path for cmake modules
The current path installs to: ROOT/share/cmake/modules
It should be: ROOT/share/dune/cmake/modules


Former-commit-id: e22a2766c0fc7c149f8654d810b2355fd1bbd17d

--- a/cmake/modules/CMakeLists.txt
+++ b/cmake/modules/CMakeLists.txt
@@ -7,4 +7,4 @@ set(modules
     FindSIONlib.cmake
     FindZOLTAN.cmake
 )
-install(FILES ${modules} DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/cmake/modules)
+install(FILES ${modules} DESTINATION ${DUNE_INSTALL_MODULEDIR})
