[cmake] Link libdunealugrid against DUNE_LIBS
When building libdunealugrid as a shared library, linking fails (at
least on OS X) due to missing references to symbols in the core
libraries.

This patch fixes the problem by explicitly linking against the Dune
libraries.

Former-commit-id: 67205d7d83e3312f737e06a3506372977eded6fe

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -9,6 +9,11 @@ dune_add_library(dunealugrid
 # add mpi flags to compile library
 add_dune_mpi_flags( dunealugrid )
 
+# on macOS, we have to explicitly link against the Dune libraries
+if(CMAKE_HOST_APPLE)
+  target_link_libraries(dunealugrid ${DUNE_LIBS})
+endif()
+
 # METIS dependencies
 if(METIS_FOUND)
   target_link_libraries(dunealugrid ${METIS_LIBRARIES})
