Make compile with zlib in a nonstandard location
Former-commit-id: 7f4f7fc2c8483a2de89eed2c5862aa69cc0cd852

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -24,6 +24,8 @@ target_link_libraries(dunealugrid ${ZOLTAN_LIBRARIES})
 set_property(TARGET dunealugrid APPEND PROPERTY
              INCLUDE_DIRECTORIES "${ZOLTAN_INCLUDE_DIRS}")
 endif()
+set_property(TARGET dunealugrid APPEND PROPERTY
+             INCLUDE_DIRECTORIES "${ZLIB_INCLUDE_DIR}")
 
 # register alu grid to all pkg flags
 dune_register_package_flags(LIBRARIES "${DUNE_ALUGRID_LIBRARY}"
