[bugfix] compile all objects into libdunealugrid.a when using autotools to be compatible with cmake library creation.
Former-commit-id: 01dccca37db5ac10f3f893ad0069c904c2d7d536

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,4 +1,4 @@
-libalugrid_serial_la_SOURCES = \
+ALUGRID_SERIAL_SOURCES=\
 	$(top_srcdir)/dune/alugrid/impl/binaryio.cc \
 	$(top_srcdir)/dune/alugrid/impl/macrofileheader.cc \
 	$(top_srcdir)/dune/alugrid/impl/serial/ghost_info.cc \
@@ -13,11 +13,7 @@ libalugrid_serial_la_SOURCES = \
 	$(top_srcdir)/dune/alugrid/impl/serial/myalloc.cc \
 	$(top_srcdir)/dune/alugrid/impl/duneinterface/gitter_dune_impl.cc
 
-libalugrid_serial_la_CPPFLAGS = $(AM_CPPFLAGS) $(ZLIB_CPPFLAGS)
-libalugrid_serial_la_LDFLAGS = $(AM_LDFLAGS)
-libalugrid_serial_la_LIBADD = $(ZLIB_LIBS)
-
-libalugrid_parallel_la_SOURCES = \
+ALUGRID_PARALLEL_SOURCES=\
 	$(top_srcdir)/dune/alugrid/impl/serial/ghost_elements.cc \
 	$(top_srcdir)/dune/alugrid/impl/duneinterface/gitter_dune_pll_impl.cc \
 	$(top_srcdir)/dune/alugrid/impl/parallel/mpAccess.cc \
@@ -29,22 +25,17 @@ libalugrid_parallel_la_SOURCES = \
 	$(top_srcdir)/dune/alugrid/impl/parallel/gitter_pll_sti.cc \
 	$(top_srcdir)/dune/alugrid/impl/parallel/gitter_tetra_top_pll.cc
 
-libalugrid_parallel_la_CPPFLAGS = $(AM_CPPFLAGS) $(ZLIB_CPPFLAGS)
-libalugrid_parallel_la_LDFLAGS = $(AM_LDFLAGS)
-libalugrid_parallel_la_LIBADD = $(ALL_PKG_LIBS) libalugrid_serial.la ${ZOLTAN_LIBS} ${PARMETIS_LIBS} ${METIS_LIB} $(ZLIB_LIBS)
-
-
-ALUGRID_IMPL_LIBS=libalugrid_parallel.la libalugrid_serial.la 
-
-lib_LTLIBRARIES = $(ALUGRID_IMPL_LIBS) libdunealugrid.la
+lib_LTLIBRARIES = libdunealugrid.la
 
 libdunealugrid_la_SOURCES = \
+  $(ALUGRID_SERIAL_SOURCES) \
+  $(ALUGRID_PARALLEL_SOURCES) \
 	$(top_srcdir)/dune/alugrid/3d/faceutility.cc \
 	$(top_srcdir)/dune/alugrid/3d/mappings.cc \
 	$(top_srcdir)/dune/alugrid/3d/topology.cc
 
 libdunealugrid_la_CPPFLAGS = $(AM_CPPFLAGS) 
 libdunealugrid_la_LDFLAGS = $(AM_LDFLAGS)
-libdunealugrid_la_LIBADD = $(DUNE_LIBS) $(ALUGRID_IMPL_LIBS)
+libdunealugrid_la_LIBADD = $(DUNE_LIBS) $(ALL_PKG_LIBS) ${ZOLTAN_LIBS} ${PARMETIS_LIBS} ${METIS_LIB} $(ZLIB_LIBS)
 
 include $(top_srcdir)/am/global-rules
