make a test target so that ctest works.
Former-commit-id: af3fde69612cb48d8216db74e7abbfa965380e01

--- a/dune/alugrid/test/CMakeLists.txt
+++ b/dune/alugrid/test/CMakeLists.txt
@@ -1,3 +1,5 @@
+add_directory_test_target(_test_target)
+
 set(SUBDIRS dgf)
 set(TESTS
   test-alugrid
@@ -34,3 +36,5 @@ foreach(i ${TESTS})
   dune_target_enable_all_packages( ${i} )
   add_test(${i} ${i})
 endforeach(i ${TESTS})
+
+add_dependencies(${_test_target} ${TESTS})
