--- a/dune/alugrid/test/dgf/CMakeLists.txt
+++ b/dune/alugrid/test/dgf/CMakeLists.txt
@@ -1,12 +1,16 @@
-set(SUBDIRS  )
-set(EXTRA_DIST  *.dgf)
-set(dgfdir  ${CMAKE_INSTALL_INCLUDEDIR}/dune/alugrid/test/dgf)
-# include not needed for CMake
-# include $(top_srcdir)/am/global-rules
-foreach(i ${SUBDIRS})
-  if(${i} STREQUAL "test")
-    set(opt EXCLUDE_FROM_ALL)
-  endif(${i} STREQUAL "test")
-  add_subdirectory(${i} ${opt})
-  unset(opt)
-endforeach(i ${SUBDIRS})
+set(DGFS
+  2-3-testgrid.dgf
+  ball.dgf
+  cube-testgrid-2-2.dgf
+  cube-testgrid-2-3.dgf
+  grid2d_str1d.dgf
+  simplex-testgrid-2-2.dgf
+  simplex-testgrid-2-3.dgf
+  simplex-testgrid-3-3.dgf
+)
+
+foreach(dgf ${DGFS})
+  configure_file( ${dgf} ${CMAKE_CURRENT_BINARY_DIR}/ COPYONLY)
+endforeach()
+
+install(FILES ${DGFS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/alugrid/test/dgf)
