--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ list(APPEND CMAKE_MODULE_PATH ${dune-grid_MODULE_PATH}
 
 #include the dune macros
 include(DuneMacros)
-include(GridType) 
+include(GridType)
 
 # start a dune project with information from dune.module
 dune_project()
@@ -42,6 +42,8 @@ add_subdirectory(lib)
 
 add_subdirectory(examples EXCLUDE_FROM_ALL)
 add_subdirectory(utils)
+
+add_subdirectory(python)
 
 # finalize the dune project, e.g., generate config.h etc.
 finalize_dune_project(GENERATE_CONFIG_H_CMAKE)
