[bugfix] make cmake work with 2.4 release.
Former-commit-id: bcf35cf7f0e61e7f22ce9b9b50e7a7c8fda50f46

--- a/dune/alugrid/impl/test/CMakeLists.txt
+++ b/dune/alugrid/impl/test/CMakeLists.txt
@@ -8,6 +8,10 @@ set(TESTS
 # copy data to build source to make tests work
 file(COPY alugrid.cfg grids DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
-foreach(TEST ${TESTS})
-  dune_add_test(NAME ${TEST} SOURCES ${TEST}.cc LINK_LIBRARIES dunealugrid)
-endforeach()
+# dune 2.5 and higher
+if(NOT (("${DUNE_COMMON_VERSION_MAJOR}" STREQUAL "2")
+           AND ("${DUNE_COMMON_VERSION_MINOR}" STREQUAL "4")))
+  foreach(TEST ${TESTS})
+    dune_add_test(NAME ${TEST} SOURCES ${TEST}.cc LINK_LIBRARIES dunealugrid)
+  endforeach()
+endif()
