[python] add pickling support dune ALUGrid
Former-commit-id: 87be1b5417af18bf1c66b59226eba0cf098249ed

--- a/dune/alugrid/CMakeLists.txt
+++ b/dune/alugrid/CMakeLists.txt
@@ -12,6 +12,6 @@ foreach(i ${SUBDIRS})
   unset(opt)
 endforeach(i ${SUBDIRS})
 
-set(alugrid_HEADERS dgf.hh grid.hh)
+set(alugrid_HEADERS dgf.hh grid.hh pickle.hh)
 install(FILES ${alugrid_HEADERS}
   DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/alugrid)
