--- a/dune/alugrid/impl/test/CMakeLists.txt
+++ b/dune/alugrid/impl/test/CMakeLists.txt
@@ -9,9 +9,9 @@ set(TESTS
 file(COPY alugrid.cfg grids DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
 # dune 2.5 and higher
-if(NOT (("${DUNE_COMMON_VERSION_MAJOR}" STREQUAL "2")
-           AND ("${DUNE_COMMON_VERSION_MINOR}" STREQUAL "4")))
-  foreach(TEST ${TESTS})
-    dune_add_test(NAME ${TEST} SOURCES ${TEST}.cc LINK_LIBRARIES dunealugrid)
-  endforeach()
-endif()
+#if(NOT (("${DUNE_COMMON_VERSION_MAJOR}" STREQUAL "2")
+#           AND ("${DUNE_COMMON_VERSION_MINOR}" STREQUAL "4")))
+#  foreach(TEST ${TESTS})
+#    dune_add_test(NAME ${TEST} SOURCES ${TEST}.cc LINK_LIBRARIES dunealugrid)
+#  endforeach()
+#endif()
