[CMake] check for dune-corepy instead of a CMake command
Former-commit-id: 51aa8b3f20fe1f5673aaedc94cf9e9098d74ff58

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,7 +42,7 @@ add_subdirectory(lib)
 add_subdirectory(examples EXCLUDE_FROM_ALL)
 add_subdirectory(utils)
 
-if (COMMAND add_python_target)
+if(dune-corepy_FOUND)
   add_subdirectory(python)
 endif()
 
