[cmake] use infrastructure in dune-common to build Python packages
In dune-common 2.6+ the infrastructure for creating Python packages is
included. This patch replaces our own infrastructure by the core
implementation


Former-commit-id: bbbb9fe73bafa2e5d27aeb32b7d813016cda48ee

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,9 @@ add_subdirectory(utils)
 
 if(dune-corepy_FOUND)
   add_subdirectory(python)
+  if(NOT (${DUNE_COMMON_VERSION} VERSION_LESS 2.6))
+    dune_python_install_package(PATH "python")
+  endif()
 endif()
 
 # finalize the dune project, e.g., generate config.h etc.
